<resources>

    <string name="app_name">Adote uma Árvore</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="crieconta">Crie sua conta</string>

    <string name="nomereg">Nome</string>
    <string name="sobrenomereg">Sobrenome</string>
    <string name="datanascimentoreg">Data Nascimento</string>
    <string name="loginreg">Login</string>
    <string name="emailreg">E-mail</string>
    <string name="fonereg">Celular</string>
    <string name="senhareg">Senha</string>
    <string name="senhaconfirmacaoreg">Confirme sua senha</string>
    <string name="cadastrarreg">Cadastrar</string>
    <string name="entrarreg">Já possui uma conta? Entrar</string>

    <string name="title_activity_profile">Inicio</string>

    <string name="navigation_drawer_open">Abrir navegação</string>
    <string name="navigation_drawer_close">Fechar navegação</string>

    <string name="nav_header_title">Adote uma árvore</string>
    <string name="nav_header_subtitle">Arborizando a cidade juntos!</string>

    <string name="nav_header_desc">Cabeçalho Navegação</string>
    <string name="action_settings">Configurações</string>
    <string name="action_logout">Logout</string>

    <string name="menu_profile">Perfil</string>
    <string name="menu_newPlant">Novo Plantio</string>
    <string name="menu_nativeSpecies">Espécies Nativas</string>
    <string name="menu_doar">Doar</string>
    <string name="menu_information">Informativos</string>
    <string name="menu_viveiro">Mudas Disponíveis Viveiro (IAT)</string>
    <string name="sub_menu_title">Externos (API / Crawler)</string>


    <string name="newPlant_Plant">Plantio</string>
    <string name="newPlant_Species">Espécie</string>
    <string name="newPlant_Nick">Apelido</string>
    <string name="newPlant_Share">Comente sobre sua experiência</string>
    <string name="newPlant_OK">OK</string>
    <string name="newPlant_Back">Voltar</string>

    <string name="viveiro_Viveiro">Espécies no Viveiro (IAT)</string>


    <string name="general_Consultar">Consultar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>